fix(openapi): make rule deletion compatible with OpenAPI 3.0
